--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -63,10 +63,14 @@ h1{
   margin-left: 50px;
   padding-left: 80px;
 }
+
 .nav{
   color: rgb(0, 0, 0);
   padding: 90px;
   
+}
+.logbtn{
+  align-content: center;
 }
 
 
